syntax = "proto3";
package notifications;

option go_package = ".;api";
// Core RPC definitions for the notifications service, which includes
// posting notifications and managing rules.

import "notifications.proto";
import "rules.proto";
import "health.proto";

service Notifications {
  // Publish a notification
  rpc Notify(Event) returns (Response);

  // Manage notification alerting rules
  rpc AddRule(Rule) returns (RuleAddResponse);
  rpc DeleteRule(RuleIdentifier) returns (RuleDeleteResponse);
  rpc UpdateRule(Rule) returns (RuleUpdateResponse);
  rpc GetRule(RuleIdentifier) returns (RuleGetResponse);
  rpc ListRules(Empty) returns (RuleListResponse);
  rpc ValidateWebhook(URLValidationRequest) returns (URLValidationResponse);

  // Health checks and metadata
  rpc Version(VersionRequest) returns (VersionResponse);
}
